added parallel command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
 	"main": "index.js",
 	"scripts": {
 		"test:dev": "cypress open",
-		"test:dash": "npx cypress run --record --key afee750e-94be-443d-823b-b15fc373fb3c"
+		"test:dash": "npx cypress run --record --key afee750e-94be-443d-823b-b15fc373fb3c",
+		"cy:spec1": "cypress run --spec cypress/integration/movie_booking.cy.js --record --key afee750e-94be-443d-823b-b15fc373fb3c",
+		"cy:spec2": "cypress run --spec cypress/integration/login.cy.js --record --key afee750e-94be-443d-823b-b15fc373fb3c",
+		"cy:parallel": "npm run cy:spec1 -- --browser chrome --group Spec1 --ci-build-id 4 & npm run cy:spec2 -- --browser chrome --group Spec2 --ci-build-id 4"
 	},
 	"keywords": [],
 	"author": "",
